# CG

./: --help_code.h  .gitignore  CHANGES.md  CMakeLists.txt  CnC_Generals_ZH_Ultimate_Modernization_Plan.md  README.md  deep-research-report.md  structure.md
Generals/Code/GameEngine/Include/GameLogic/: AITNGuard.h  Damage.h  GameLogic.h  Object.h  PartitionManager.h
Generals/Code/GameEngine/Include/GameLogic/Module/: WeaponSetUpgrade.h
Generals/Code/GameEngine/Source/GameLogic/Object/: Locomotor.cpp  Weapon.cpp
Generals/Code/GameEngine/Source/GameLogic/System/: GameLogic.cpp
Generals/Code/Libraries/Source/WPAudio/: AUD_Cache.cpp  AUD_Device.cpp  AUD_StreamBuffering.cpp
GeneralsMD/: CMakeLists.txt
GeneralsMD/Code/GameEngine/: CMakeLists.txt
GeneralsMD/Code/GameEngine/Include/AI/: FlowField.h
GeneralsMD/Code/GameEngine/Include/Common/: AsciiString.h  GameMemory.h  MapReaderWriterInfo.h  PlatformAssert.h  STLTypedefs.h
GeneralsMD/Code/GameEngine/Include/GameNetwork/: GameSpy.h
GeneralsMD/Code/GameEngine/Include/Memory/: PoolAllocator.h
GeneralsMD/Code/GameEngine/Include/Precompiled/: PreRTS.h
GeneralsMD/Code/GameEngine/Include/System/: JobSystem.h
GeneralsMD/Code/GameEngine/Source/AI/: FlowField.cpp
GeneralsMD/Code/GameEngine/Source/Common/INI/: INI.cpp
GeneralsMD/Code/GameEngine/Source/GameLogic/Object/Update/: AIUpdate.cpp
GeneralsMD/Code/GameEngine/Source/GameNetwork/: GameSpyStub.cpp  udp.cpp
GeneralsMD/Code/GameEngine/Source/System/: JobSystem.cpp
GeneralsMD/Code/GameEngineDevice/: CMakeLists.txt
GeneralsMD/Code/GameEngineDevice/Include/Audio/: IAudioDevice.h
GeneralsMD/Code/GameEngineDevice/Include/Input/: IInputDevice.h
GeneralsMD/Code/GameEngineDevice/Include/MilesAudioDevice/: MilesAudioManager.h
GeneralsMD/Code/GameEngineDevice/Include/Render/: IRenderDevice.h
GeneralsMD/Code/GameEngineDevice/Include/Video/: IVideoPlayer.h
GeneralsMD/Code/GameEngineDevice/Include/W3DDevice/Common/: IUpscaler.h  InstanceData.h  RenderStateCache.h
GeneralsMD/Code/GameEngineDevice/Source/Audio/: XAudio2Device.cpp
GeneralsMD/Code/GameEngineDevice/Source/SDL2Device/: SDL2InputDevice.cpp  SDL2InputDevice.h
GeneralsMD/Code/GameEngineDevice/Source/Video/: FFmpegVideoPlayer.cpp
GeneralsMD/Code/GameEngineDevice/Source/W3D/: DX11W3DDevice.cpp
GeneralsMD/Code/GameEngineDevice/Source/W3DDevice/Common/: RenderStateCache.cpp
GeneralsMD/Code/GameEngineDevice/Source/W3DDevice/GameClient/: W3DShaderManager.cpp
GeneralsMD/Code/GameEngineDevice/Source/Win32Device/Common/: Win32BIGFileSystem.cpp  Win32LocalFileSystem.cpp
GeneralsMD/Code/GameNetwork/: CMakeLists.txt
GeneralsMD/Code/Libraries/Include/: CrossPlatform.h  D3DXCompat.h  D3dx8math.h  atlbase.h  d3dx8tex.h  dinput.h  dx8stub.h  dxfile.h  gnu_regex.h  windows.h
GeneralsMD/Code/Libraries/Include/GameSpy/GP/: GP.h
GeneralsMD/Code/Libraries/Include/GameSpy/Peer/: Peer.h
GeneralsMD/Code/Libraries/Include/Lib/: BaseType.h
GeneralsMD/Code/Libraries/Include/wpaudio/: attributes.h
GeneralsMD/Code/Libraries/Include/wsys/: File.h
GeneralsMD/Code/Libraries/Source/Benchmark/: CMakeLists.txt
GeneralsMD/Code/Libraries/Source/Compression/: CMakeLists.txt
GeneralsMD/Code/Libraries/Source/Compression/CompLibHeader/: lzhl.h
GeneralsMD/Code/Libraries/Source/WWVegas/WW3D2/: CMakeLists.txt  D3dx8core.h  d3d8.h  d3dx8.h  dx8wrapper.cpp  dx8wrapper.h  hanimmgr.h
GeneralsMD/Code/Libraries/Source/WWVegas/WW3D2/VulkanBackend/: CMakeLists.txt  VulkanRenderDevice.cpp  VulkanRenderDevice.h
GeneralsMD/Code/Libraries/Source/WWVegas/WWAudio/: CMakeLists.txt  mss.h
GeneralsMD/Code/Libraries/Source/WWVegas/WWDebug/: CMakeLists.txt  wwdebug.cpp  wwdebug.h  wwmemlog.cpp  wwprofile.cpp
GeneralsMD/Code/Libraries/Source/WWVegas/WWDownload/: CMakeLists.txt
GeneralsMD/Code/Libraries/Source/WWVegas/WWLib/: CMakeLists.txt  Except.cpp  Except.h  RAWFILE.H  TARGA.CPP  Vector.H  always.h  blitblit.h  cpudetect.cpp  critsection.h  data.cpp  ffactory.cpp  ffactory.h  hash.h  lcw.cpp  lzo.cpp  mpu.cpp  mutex.h  rawfile.cpp  regexpr.cpp  registry.cpp  rlerle.h  sha.cpp  simplevec.h  timer.h  trim.cpp  wwmouse.cpp  wwmouse.h  wwstring.h
GeneralsMD/Code/Libraries/Source/WWVegas/WWMath/: CMakeLists.txt
GeneralsMD/Code/Libraries/Source/WWVegas/WWSaveLoad/: CMakeLists.txt  parameter.cpp  parameter.h
GeneralsMD/Code/Libraries/Source/WWVegas/Wwutil/: CMakeLists.txt  miscutil.cpp
GeneralsMD/Code/Libraries/Source/WWVegas/wwshade/: CMakeLists.txt  shddef.cpp  shddef.h  shdrenderer.cpp
GeneralsMD/Code/Main/: CMakeLists.txt  WinMain.cpp  WinMain.h
GeneralsMD/Code/Tools/MapCacheBuilder/Source/: WinMain.cpp
GeneralsMD/Code/Tools/PATCHGET/: CHATAPI.CPP
GeneralsMD/Code/Tools/buildVersionUpdate/: buildVersionUpdate.cpp
GeneralsMD/Code/Tools/textureCompress/: textureCompress.cpp
GeneralsMD/Shaders/: Shared.hlsli  Terrain.hlsl  UI.hlsl  Unit.hlsl  VulkanBasic.frag  VulkanBasic.vert
GeneralsMD/Shaders/PostProcess/: DLSS.hlsl  Shadows.hlsl
GeneralsMD/Test/: CMakeLists.txt
GeneralsMD/Test/Smoke/: smoke_test.py
GeneralsMD/Test/Unit/: test_ini_parser.cpp  test_pathfinding.cpp
build_test/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  CommandConquerGeneralsZeroHour.slnx  Makefile  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake
build_test/GeneralsMD/: CTestTestfile.cmake  Makefile  cmake_install.cmake
build_test/GeneralsMD/Code/GameEngine/: GameEngine.vcxproj  GameEngine.vcxproj.filters  Makefile  cmake_install.cmake
build_test/GeneralsMD/Code/GameEngineDevice/: GameEngineDevice.vcxproj  GameEngineDevice.vcxproj.filters  Makefile  cmake_install.cmake
build_test/GeneralsMD/Code/Main/: Makefile  ZeroHour.vcxproj  ZeroHour.vcxproj.filters  cmake_install.cmake
build_test/GeneralsMD/Test/: CTestTestfile.cmake  Makefile  cmake_install.cmake
build_test/x64/Debug/ZERO_CHECK/: ZERO_CHECK.recipe
build_test/x64/Debug/ZERO_CHECK/ZERO_CHECK.tlog/: CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  ZERO_CHECK.lastbuildstate
(+412 files in other folders)
