# GameEngineDevice Library (Phase 1-4 Refactored)
# Core sources (platform-independent)
file(GLOB_RECURSE GAMEENGINEDEVICE_CORE_SOURCES
  ${CMAKE_CURRENT_SOURCE_DIR}/Source/W3DDevice/*.cpp
  ${CMAKE_CURRENT_SOURCE_DIR}/Source/Audio/*.cpp
  ${CMAKE_CURRENT_SOURCE_DIR}/Source/Video/*.cpp
)

# Platform-specific sources
if(WIN32)
  file(GLOB_RECURSE GAMEENGINEDEVICE_PLATFORM_SOURCES
    ${CMAKE_CURRENT_SOURCE_DIR}/Source/Win32Device/*.cpp
  )
  set(GAMEENGINEDEVICE_PLATFORM_LIBS dinput8.lib dxguid.lib)
  set(GAMEENGINEDEVICE_PLATFORM_DEFINES WIN32_DEVICE_ENABLED)
elseif(UNIX AND NOT APPLE)
  file(GLOB_RECURSE GAMEENGINEDEVICE_PLATFORM_SOURCES
    ${CMAKE_CURRENT_SOURCE_DIR}/Source/SDL2Device/*.cpp
  )
  find_package(SDL2 REQUIRED)
  set(GAMEENGINEDEVICE_PLATFORM_LIBS SDL2::SDL2)
  set(GAMEENGINEDEVICE_PLATFORM_DEFINES SDL2_DEVICE_ENABLED UNIX_DEVICE_ENABLED)
elseif(APPLE)
  file(GLOB_RECURSE GAMEENGINEDEVICE_PLATFORM_SOURCES
    ${CMAKE_CURRENT_SOURCE_DIR}/Source/SDL2Device/*.cpp
  )
  find_package(SDL2 REQUIRED)
  set(GAMEENGINEDEVICE_PLATFORM_LIBS SDL2::SDL2)
  set(GAMEENGINEDEVICE_PLATFORM_DEFINES SDL2_DEVICE_ENABLED APPLE_DEVICE_ENABLED)
endif()

set(GAMEENGINEDEVICE_SOURCES 
  ${GAMEENGINEDEVICE_CORE_SOURCES}
  ${GAMEENGINEDEVICE_PLATFORM_SOURCES}
)

add_library(GameEngineDevice STATIC ${GAMEENGINEDEVICE_SOURCES})

target_include_directories(GameEngineDevice PUBLIC
  ${CMAKE_CURRENT_SOURCE_DIR}/Include
)
if(SDL2_FOUND)
  target_include_directories(GameEngineDevice PUBLIC ${SDL2_INCLUDE_DIRS})
endif()

target_link_libraries(GameEngineDevice PUBLIC
  GameEngine
  WW3D2
  ${GAMEENGINEDEVICE_PLATFORM_LIBS}
)

target_compile_definitions(GameEngineDevice PRIVATE
  ${GAMEENGINEDEVICE_PLATFORM_DEFINES}
)
